src/app/features/main/main.scss
:host {
  display: block;
  width: 100%;
  height: 100%;
  min-height: 0;
  overflow: hidden;
}

.main-container {
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: stretch;
  justify-content: center;
  padding: 0 0.4375rem;
  /* 7px */
  overflow: hidden;
}

.main-wrapper {
  display: flex;
  justify-content: center;
  width: 100%;
}

.main {
  display: flex;
  flex-direction: row;
  // gap: 1rem;
  /* 16px */
  width: 100%;
  max-width: 100%;
  min-width: auto;
  min-height: 100vh;

  .main-right {
    display: flex;
    flex-direction: column;
    margin-right: 1rem;
    gap: 2.25rem;
    /* 36px */
    width: 100%;
    flex: 1;
    min-width: 60vw;
    max-width: 60vw;

    .banner {
      // Styles cho banner nếu cần
      overflow: visible;
    }

    .menu-list {
      // Styles cho menu-list nếu cần
    }
  }

  .weekday-attendance-wrapper {
    flex-shrink: 0;
    width: 100%;
    max-width: 23.9375rem;
    min-height: 100vh;
    display: flex;
    align-items: stretch;
    justify-content: center;
  }
}

